--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -25,6 +25,6 @@ main:
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-  - name: CV (Last updated 10/25/2023)
-   url: "https://drive.google.com/file/d/1ScyDCuNUbPx6grag0jNpHSn1kpkZ1bKa/view?usp=drive_link"
-   weight: 130
+#  - name: CV (Last updated 10/25/2023)
+#   url: "https://drive.google.com/file/d/1ScyDCuNUbPx6grag0jNpHSn1kpkZ1bKa/view?usp=drive_link"
+#   weight: 130
