--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,10 +5,10 @@
 
 main:
   - name: About
-    url: '#about'
+    url: '#admin'
     weight: 10
   - name: Projects
-    url: '#projects'
+    url: '#project'
     weight: 20
   - name: Teaching
     url: '#teaching'
@@ -17,11 +17,11 @@ main:
     url: '#talks'
     weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#publication'
     weight: 50
   - name: Contact
     url: '#contact'
-    weight: 60
+    weight: 130
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
