--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -128,25 +128,25 @@ address : "VA Boston Healthcare System<br>150 S Huntington St.<br>Boston, MA 021
 office_hours : ""
 
 # Enter an optional link for booking appointments (e.g. calendly.com).
-#appointment_url = "https://calendly.com"
+#appointment_url : "https://calendly.com"
 
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links : [
-  # {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
-  # {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
-  # {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
-  # {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
-  # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
+  # {icon : "twitter", icon_pack : "fab", name : "DM Me", link : "https://twitter.com/Twitter"},
+  # {icon : "skype", icon_pack : "fab", name : "Skype Me", link : "skype:echo123?call"},
+  # {icon : "keybase", icon_pack : "fab", name : "Chat on Keybase", link : "https://keybase.io/"},
+  # {icon : "comments", icon_pack : "fas", name : "Discuss on Forum", link : "https://discourse.gohugo.io"},
+  # {icon : "telegram", icon_pack : "fab", name : "Telegram Me", link : "https://telegram.me/@Telegram"},
   ]
 
 # Display a map.
 # To show your address on a map in the contact widget, you need to enter your latitude, longitude and choose
 # a map provider below.
-# To use Google Maps, set `map = 1` and enter your API key that can be obtained here:
+# To use Google Maps, set `map : 1` and enter your API key that can be obtained here:
 #   https://developers.google.com/maps/documentation/javascript/get-api-key
-# To use OpenStreetMap tiles, set `map = 2`.
-# To use OpenStreetMap on a high traffic site, set `map = 3` and enter your API key that can be obtained here:
+# To use OpenStreetMap tiles, set `map : 2`.
+# To use OpenStreetMap on a high traffic site, set `map : 3` and enter your API key that can be obtained here:
 #   https://www.mapbox.com/studio/account/tokens
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
 #
@@ -155,55 +155,55 @@ contact_links : [
 #   1: Google Maps
 #   2: OpenStreetMap (Mapnik)
 #   3: OpenStreetMap (Mapbox)
-map = 0
-map_api_key = ""
-latitude = "37.4275"
-longitude = "-122.1697"
-zoom = 15
+map : 0
+map_api_key : ""
+latitude : "37.4275"
+longitude : "-122.1697"
+zoom : 15
 
 ############################
 ## Plugins                ##
 ############################
 
 # Load CSS and JS plugins
-#   E.g. To load `/assets/css/custom.css`, set `plugins_css = ["custom"]`.
-#   E.g. To load `/assets/js/custom.js`, set `plugins_js = ["custom"]`.
-plugins_css = []
-plugins_js  = []
+#   E.g. To load `/assets/css/custom.css`, set `plugins_css : ["custom"]`.
+#   E.g. To load `/assets/js/custom.js`, set `plugins_js : ["custom"]`.
+plugins_css : []
+plugins_js  : []
 
 ############################
 ## Advanced options       ##
 ############################
 
 # Get user avatars from Gravatar.com? (true/false)
-gravatar = false
+gravatar : false
 
 # Align the main menu to the right of the page? (true/false)
-menu_align_right = false
+menu_align_right : false
 
 # Show estimated reading time for posts? (true/false)
-reading_time = true
+reading_time : true
 
 # Display comment count (if commenting enabled in config.toml)? (true/false)
-comment_count = true
+comment_count : true
 
 # Display next/previous section pager? (true/false)
-section_pager = false
-docs_section_pager = true  # Display pager in Docs layout (e.g. tutorials)?
+section_pager : false
+docs_section_pager : true  # Display pager in Docs layout (e.g. tutorials)?
 
 # Enable in-built social sharing buttons? (true/false)
-sharing = true
+sharing : true
 
 # Configuration of publication pages.
 [publications]
   # Date format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
   #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
-  date_format = "January 2006"
+  date_format : "January 2006"
 
   # Citation style ("apa" or "mla")
-  citation_style = "apa"
-  links_title = false
-  links_authors = false
+  citation_style : "apa"
+  links_title : false
+  links_authors : false
 
 # Configuration of project pages.
 [projects]
@@ -212,9 +212,9 @@ sharing = true
   #   2: Compact
   #   3: Card
   #   4: Citation (publications only)
-  post_view = 2
-  publication_view = 2
-  talk_view = 2
+  post_view : 2
+  publication_view : 2
+  talk_view : 2
 
 # Search.
 [search]
@@ -222,12 +222,12 @@ sharing = true
   #   0: No search engine
   #   1: Academic (built-in)
   #   2: Algolia (https://www.algolia.com)
-  engine = 1
+  engine : 1
 
   # Configuration of Algolia search engine.
   # Paste the values from your Algolia dashboard.
   [search.algolia]
-    app_id = ""
-    api_key = ""
-    index_name = ""
-    show_logo = false
+    app_id : ""
+    api_key : ""
+    index_name : ""
+    show_logo : false
