--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -201,7 +201,7 @@ sharing : true
   #  date_format : 'January 1, 2006'
 
   # Citation style ("apa" or "mla")
-  citation_style : 'apa'
+  citation_style = 'apa'
   links_title : false
   links_authors : false
 
