--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -2,6 +2,8 @@
 # Guide: https://docs.hugoblox.com/tutorial/
 # Documentation: https://docs.hugoblox.com/
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
+#Sponsor
+i_am_a_sponsor: true
 
 # Appearance
 
@@ -114,3 +116,5 @@ extensions:
 security:
   # Allow frame for embedding speaker notes in slides
   allow_frame: true
+
+  
